2011-01-29  Karl Berry  <karl@tug.org>

	* search.c (search): report the actual popen call if D_FILES.
	* quotecmd.tex: make test filename match quotecmd-test.pl.
	* quotecmd.dvi: regenerate.
	* quotecmd-test.pl: doc fixes.

2011-01-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Add testdata/quotecmd.dvi to EXTRA_DIST.

2011-01-28  Karl Berry  <karl@tug.org>

	* quotecmd-test.pl, testdata/quotecmd.tex: doc fixes.
	* testdata/quotecmd.dvi: add to repo, since the test relies on
	this file existing.

2010-12-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c: Still more tweaks. Remove unused code and vars.

2010-11-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c: Further reduce diffs against pdftex's writet1.c.
	Declare t1_encoding as enum instead of int.
	Change t1_builtin_enc() from void to char **.

	* writet1.c, protos.h: Replace void load_enc(char *, const char **)
	by char **load_enc_file(char *).
	* download.c (getEncoding): Adapt, and change result to non-const.
	Somewhat better use of DOWNLOAD_USING_PDFTEX.

2010-11-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c (t1_check_unusual_charstring): Drop unused variable.

2010-11-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c: Still more minor tweaks.

2010-11-26  Thanh Han The  <thanh@river-valley.org>

	* writet1.c (t1_check_unusual_charstring): switch EOL to space
	before appending.

2010-11-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writet1.c: Still more formatting tweaks.

2010-11-14  Karl Berry  <karl@tug.org>

	* writet1.c: endless formatting tweaks.

2010-11-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* download.c: Change i<MAX_CHAR_CODE into i<=MAX_CHAR_CODE, because
	MAX_CHAR_CODE is 255 now.

2010-11-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* download.c [MAX_CHAR_CODE]: Define as 255 (not 256).

	* writet1.c: More formatting and other trivial changes, to
	further reduce diffs against pdftex's writet1.c.
