@@ -126,13 +126,22 @@ copyfile_general(const char *s, struct header_list *cur_header)
       if ( NULL != lastdirsep ) trunc_s = lastdirsep + 1;
 #ifdef VMCMS
       sprintf(errbuf,
-   "Couldn't find figure file %s with CMS name %s; continuing.\nNote that an absolute path or a relative path with .. are denied in -R2 mode.", s, trunc_s);
+   "Couldn't find figure file %s with CMS name %s; continuing.", s, trunc_s);
+      if (secure == 2) {
+         strcat(errbuf, "\nNote that an absolute path or a relative path with .. are denied in -R2 mode.");
+      }
 #else /* VMCMS */
       sprintf(errbuf,
-    "Couldn't find figure file %s with MVS name %s; continuing.\nNote that an absolute path or a relative path with .. are denied in -R2 mode.", s, trunc_s);
+    "Couldn't find figure file %s with MVS name %s; continuing.", s, trunc_s);
+      if (secure == 2) {
+         strcat(errbuf, "\nNote that an absolute path or a relative path with .. are denied in -R2 mode.");
+      }
 #endif /* VMCMS */
 #else /* VMCMS || MVSXA */
-      sprintf(errbuf, "Could not find figure file %s; continuing.\nNote that an absolute path or a relative path with .. are denied in -R2 mode.", s);
+      sprintf(errbuf, "Could not find figure file %s; continuing.", s);
+      if (secure == 2) {
+         strcat(errbuf, "\nNote that an absolute path or a relative path with .. are denied in -R2 mode.");
+      }
 #endif /* VMCMS || MVSXA */
       break;
 #ifndef VMCMS
@@ -174,7 +183,10 @@ copyfile_general(const char *s, struct header_list *cur_header)
 	 if(f==NULL)
 	    f = search(figpath, s, READBIN);
       }
-      sprintf(errbuf, "! Could not find header file %s.\nNote that an absolute path or a relative path with .. are denied in -R2 mode.", s);
+      sprintf(errbuf, "! Could not find header file %s.", s);
+      if (secure == 2) {
+         strcat(errbuf, "\nNote that an absolute path or a relative path with .. are denied in -R2 mode.");
+      }
       break;
    }
    if (f==NULL)
